--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "gcguestsurvey",
+  "name": "gcgguestsurvey",
   "private": true,
   "version": "0.0.0",
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
     "ejs": "2.3.4",
-    "express-helpers": "^1.3.2",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-coffee": "1.0.0",
@@ -31,7 +30,7 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/anonymous node/sails user/gcguestsurvey.git"
+    "url": "git://github.com/anonymous node/sails user/gcgguestsurvey.git"
   },
   "author": "anonymous node/sails user",
   "license": ""
