--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "grunt-contrib-uglify": "1.0.1",
     "grunt-contrib-watch": "1.0.0",
     "grunt-sails-linker": "~0.10.1",
+    "grunt-bower": "0.21.2 ",
     "grunt-sync": "0.5.2",
     "include-all": "~0.1.6",
     "lodash": "^4.16.1",
     "rc": "1.0.1",
     "sails": "~0.12.4",
     "sails-disk": "~0.10.9",
-    "sails-mongo": "0.12.1"
+    "sails-mongo": "0.12.1",
+    "bower": "1.7.9"
   },
   "scripts": {
     "debug": "node debug app.js",
