--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "include-all": "~0.1.6",
     "lodash": "^4.16.1",
     "rc": "1.0.1",
-    "sails": "~0.12.4",
+    "sails": "0.12.1",
     "sails-disk": "~0.10.9",
     "sails-mongo": "0.12.1",
     "bower": "1.7.9"
