--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
     "rc": "1.0.1",
     "sails": "0.12.1",
     "sails-disk": "~0.10.9",
-    "sails-hook-orm-mongoose": "^0.2.1",
     "sails-mongo": "0.12.1",
-    "sails-mongoose": "0.0.3"
+    "connect-redis": "3.1.0"
   },
   "scripts": {
     "debug": "node debug app.js",
