--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "bower": "1.7.9",
+    "connect-redis": "3.1.0",
     "ejs": "2.3.4",
     "grunt": "1.0.1",
     "grunt-bower": "0.21.2 ",
@@ -26,7 +27,7 @@
     "sails": "0.12.1",
     "sails-disk": "~0.10.9",
     "sails-mongo": "0.12.1",
-    "connect-redis": "3.1.0"
+    "socket.io-redis": "^0.1.4"
   },
   "scripts": {
     "debug": "node debug app.js",
