--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "socket.io-redis": "^0.1.4"
   },
   "scripts": {
+    "postinstall": "bower install; grunt build",
     "debug": "node debug app.js",
     "start": "sails lift"
   },
