--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
   ],
   "dependencies": {
     "jquery": "3.1.0",
-    "jquery-fireworks": "1.0.1"
+    "bootstrap": "3.3.7",
+    "datatables.net-bs": "1.10.11"
   },
   "license": "MIT",
   "homepage": "",
