--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "jquery": "3.1.0",
     "bootstrap": "3.3.7",
-    "datatables.net-bs": "1.10.11"
+    "datatables.net-bs": "1.10.11",
+    "jquery-fireworks": "1.0.2"
   },
   "license": "MIT",
   "homepage": "",
