--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "GC Guest Survey",
   "main": "app.js",
   "authors": [
-    "anonymous node/sails user"
+    "Matthew Grigajtis, George Norris"
   ],
   "dependencies": {
     "jquery": "3.1.0",
